@@ -35,5 +35,6 @@ void doShutdown(GtkWidget* widget,gpointer data);
 gboolean buttonDownDisk(GtkTreeView *widget,GdkEventButton *event,gpointer *userdata);
 void runTerminalHere(GtkWidget* widget,gpointer data);
 void setAskEntry(GtkWidget* widget,gpointer ptr);
+void openBM(GtkIconView *icon_view,GtkTreePath *tree_path,gpointer *userdata);
 
 #endif
